<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateExpenseActivity">


    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="-55dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/addExpense_field1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="345dp"
        android:text="@string/expense_note"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addField1_text"
        android:layout_width="@dimen/addField1_textwidth"
        android:layout_height="@dimen/addField1_textheight"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addExpense_field1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="350dp"
        android:text="@string/addExpense_field2"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addField1_text" />

    <EditText
        android:id="@+id/addField2_text"
        android:layout_width="@dimen/addField1_textwidth"
        android:layout_height="@dimen/addField1_textheight"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="184dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/addfield3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="350dp"
        android:text="@string/addExpense_field3"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addField2_text" />

    <Spinner
        android:id="@+id/paymethod_list"
        android:layout_width="@dimen/addField1_textwidth"
        android:layout_height="@dimen/addField1_textheight"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="350dp"
        android:entries="@array/Payment_method"
        android:foregroundGravity="fill_horizontal"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addfield3_text"></Spinner>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="350dp"
        android:text="@string/addExpense_textfield4"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymethod_list" />


    <Spinner
        android:id="@+id/category_list"
        android:layout_width="@dimen/addField1_textwidth"
        android:layout_height="@dimen/addField1_textheight"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="350dp"
        android:entries="@array/expense_category"
        android:foregroundGravity="fill_horizontal"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"></Spinner>

    <TextView
        android:id="@+id/addExpense_field5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="350dp"
        android:text="@string/uplaod_pic"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_list" />

    <ImageButton
        android:id="@+id/uploadImage_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:contentDescription="@string/addExpense_uploadimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toEndOf="@+id/addExpense_field5"
        app:layout_constraintTop_toBottomOf="@+id/category_list"
        app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

    <ImageView
        android:id="@+id/insertImage"
        android:layout_width="141dp"
        android:layout_height="154dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/addExpense_imageinsert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addExpense_field5"
        android:src="@drawable/ic_display_bill" />


</androidx.constraintlayout.widget.ConstraintLayout>